--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://iamniteshpandit.github.io/Portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://iamniteshpandit.github.io/portfolio/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
